# TeamOps-Insights

./: .env  .env.example  .gitattributes  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  README.md  body.md  cdk.json  docker-compose.yml  index.html  issues.md  main.py  mkdocs.yml  package.json  pytest.ini  recover_and_export.py  requirements-dev.txt  requirements-optional.txt  requirements.txt
CI-CDK-Preflight/: index.html
agent_research/: index.html
architecture/: index.html
aws/: core_handler.py  event_example.json  lambda_handler.py  s3_utils.py
aws-setup/: index.html
cdk/: README.md  app.py  cdk.json  context.example.json  index.html  requirements.txt
ci-cd/: index.html
ci-cd-least-priv/: index.html
cli-usage/: index.html
clients/: base.py  bitbucket_client.py  jira_client.py  jira_store.py  secrets_manager.py
config/: defaults.yml  settings.py  settings.yaml
context/: context-index.json
deployment/: index.html
dev_setup/: index.html
docs/: CI-CDK-Preflight.md  agent_research.md  architecture.md  aws-setup.md  ci-cd-least-priv.md  ci-cd.md  cli-usage.md  deployment.md  dev_setup.md  export-schema.md  git-historian.md  index.md  (+3 more)
rag-aws/: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
rag-aws/.github/workflows/: ci.yaml
rag-aws/infra/: main.tf  outputs.tf  variables.tf
rag-aws/services/: __init__.py
rag-aws/services/ingest/jira_ingestor/: __init__.py  adf_md.py  handler.py  jira_api.py  requirements.txt
rag-aws/services/ingest/jira_ingestor/tests/: test_adf_md.py  test_normalize.py
(+210 files in other folders)
